Realizados ajustes na disposição dos vídeos, bem como  nos títulos superiores.

--- a/espiritismo.html
+++ b/espiritismo.html
@@ -57,84 +57,84 @@
         </div>
       </div>
       <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/5pGZJA_GDys" frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/xGiwJ0EMGx4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/S_DSDwDJL-o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/jgUSQXnrczc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/go9Wa32_m6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/hZb2oBWAwKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/12gkJxq61Kc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/HnT8_AcJRHY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/Ofc7Sm5k6AU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/ozeqTRzlp8k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/W7PgexAT_x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/VXjWkSVi_EA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/FdfX23RF7to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/MKGNU-Qu5Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/WzcV31Aj89E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/Gvgb22Gei3w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/4dwOwgalcPI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/vx8vtap-1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/RvZNQLoHbLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/gjOS8qEtpIQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/zQ-MS9jpGT8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/n8d_j8uOrQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/LaZnf4dVZBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/GWKG1bNQYCc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/lp2Hlwk1f4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <iframe width="250" height="160" src="https://www.youtube.com/embed/OZOyP6-WqmY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
