--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 
     <!-- Connect -->
     <div class="container-fluid padding">
-        <div class="row text-center padding">
-            <div class="col-12">
-                <h6>Vídeos em alta</h6>
-            </div>
+        <!-- <div class="row text-left padding">
+        </div> -->
+        <div class="col-12">
+            <h5>Vídeos em alta</h5>
         </div>
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-white bg-success">
                     <iframe src="https://www.youtube.com/embed/oXKx0_BZmmc" title="Preparatório IFMS" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <!-- VÍDEO 2 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-white bg-warning">
                     <iframe src="https://www.youtube.com/embed/rZDxin0oahg" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <!-- VÍDEO 3 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-black bg-light">
                     <iframe src="https://www.youtube.com/embed/3eZgDrWFbiw" title="Preparatório Colégio Militar" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <!-- VÍDEO 4 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-white bg-primary">
                     <iframe src="https://www.youtube.com/embed/Cjad9jRpkdQ" title="África - Ensino Médio"
                      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- VÍDEO 5 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-white bg-info">
                     <iframe src="https://www.youtube.com/embed/6zc-dNRLk5U" title="Preparatório Colégio Militar"
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <!-- VÍDEO 6 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-primary">
                     <iframe src="https://www.youtube.com/embed/PbDJQtxFi-s" title="África - Ensino Médio" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <!-- VÍDEO 7 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-danger">
                     <iframe src="https://www.youtube.com/embed/nPtRR9Slzow" title="Agradecimento" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <!-- VÍDEO 8 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-info">
                     <iframe src="https://www.youtube.com/embed/f6-jGupzNjw" title="Preparatório Colégio Militar" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <!-- VÍDEO 9 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-info">
                     <iframe src="https://www.youtube.com/embed/Ven0P1DE348" title="Preparatório Colégio Militar" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <!-- VÍDEO 10 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-danger">
                     <iframe src="https://www.youtube.com/embed/duQHuqmQyrc" title="Agradecimento" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <!-- VÍDEO 11 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-info">
                     <iframe src="https://www.youtube.com/embed/tPZ7XA9hdfA" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -261,7 +261,7 @@
                 </div>
             </div>
             <!-- VÍDEO 12 -->
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div  class="card text-white bg-success">
                     <iframe src="https://www.youtube.com/embed/GYKhriPfeFQ" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
