--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -62,7 +62,7 @@
         <a href="https://youtube.com/playlist?list=PLrQK3kaiCHkFkWbJxn4ilYs680h0QDMpb" target="_blank" title="Clique aqui para acessar a Playlist no YouTube."><h5>Aulas de Matemática | Correção de Prova | CMRJ</h5></a>
       </div>
       <!-- Vídeo 1 -->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
           <iframe src="https://www.youtube.com/embed/nQdOuhk09GI" title="Preparatório Colégio Militar" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -74,7 +74,7 @@
         </div>
       </div>
       <!-- Vídeo 2 -->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
           <iframe src="https://www.youtube.com/embed/hdYHn_Mjfno" title="Preparatório Colégio Militar" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -86,7 +86,7 @@
         </div>
       </div>
       <!-- Vídeo 3 -->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
           <iframe src="https://www.youtube.com/embed/gyUJ9zrOMFA" title="Preparatório Colégio Militar" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -98,7 +98,7 @@
         </div>
       </div>
       <!-- Vídeo 4 -->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
           <iframe src="https://www.youtube.com/embed/_VAAYk6a5Qk" title="Preparatório Colégio Militar" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
@@ -112,17 +112,17 @@
       <div class="col-12">
         <h5>Aulas de Matemática | Correção de Prova | CMR</h5>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/tBsr06GdLeY" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/ZVBwSXSyRlg" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/HuBdiUh9DFQ" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -130,17 +130,17 @@
       <div class="col-12">
         <h5>Matemática | Correção de Prova | CMB</h5>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/6zc-dNRLk5U" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/7_b5oNF2BQE" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/dHI9ql9Rjfw" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
