--- a/africa.html
+++ b/africa.html
@@ -60,22 +60,22 @@
       <div class="col-12">
         <h5>Aulas de Matemática | Ensino Médio</h5>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/ONnpJVEwC8c" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/UquE5d8VrAg" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/nqdCIEPs7JI" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <iframe src="https://www.youtube.com/embed/frZBJLP2wzc" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
         gyroscope; picture-in-picture" allowfullscreen></iframe>
