--- a/prep-if.html
+++ b/prep-if.html
@@ -60,22 +60,22 @@
             <div class="col-12">
                 <h5>Aulas de Matemática</h5>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/JXX5xF69Ggs" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/mZZAgD59Bgk" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/dv3FU3WE9xE" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/Y-dtzH2pli8" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -83,27 +83,27 @@
             <div class="col-12">
                 <h5>Aulas de Língua Portuguesa</h5>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/8pRnR-hBuP8" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
                 picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/ZQyS75RxlUk" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe src="https://www.youtube.com/embed/_9nABHQY7Xg" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <iframe loading="lazy" src="https://www.youtube.com/embed/9cVnHj8X7Nk" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                <!--<iframe loading="lazy" title="Concurso Receita Federal: Plano de Estudos - Prof. Fábio Dutra" 
                 width="500" height="281" src="https://www.youtube.com/embed/plmW6hDModk?feature=oembed&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.estrategiaconcursos.com.br" 
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
