Diminuída a fonte dos tópicos de rodapé.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser
-                Integral</a>
+            <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a><!-- <img src="img/logo-ser-integral_t3.png" alt="Página inicial"> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -124,11 +123,11 @@
     <!-- Connect -->
     <div class="container-fluid padding">
         <div class="col-12">
-            <h5>Vídeos novos</h5>
+            <h6>Vídeos novos</h6>
         </div>
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
                 <div class="card text-white bg-info">
                     <iframe src="https://www.youtube.com/embed/DM2KVCnaoVY" title="YouTube video player" frameborder="0" allow="accelerometer; 
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -174,7 +173,7 @@
         </div>
         <!-- MATEMÁTICA -->
         <div class="col-12">
-            <h5>Matemática</h5>
+            <h6>Matemática</h6>
         </div>
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
@@ -227,7 +226,7 @@
         </div>
         <!-- PORTUGUÊS -->
         <div class="col-12">
-            <h5>Português</h5>
+            <h6>Português</h6>
         </div>
         <div class="row text-center padding">
             <!-- VÍDEO 1 -->
@@ -303,7 +302,7 @@
                 <div class="col-md-4">
                   <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
                   <hr>
-                  <h5>Fale Conosco</h5>
+                  <h6>Fale Conosco</h6>
                   <hr>
                   <p>projetoavante00@gmail.com</p>
                   <p>Avenida Gualter Barbosa, 1.206</p>
@@ -311,14 +310,14 @@
                 </div>
                 <div class="col-md-4">
                   <hr>
-                  <h5>Horários (BSB)</h5>
+                  <h6>Horários (BSB)</h6>
                   <hr>
                   <p>Segunda, Quarta e Sexta</p>
                   <p>8h - 11h40min | 14h - 17h40min</p>
                 </div>
                 <div class="col-md-4">
                   <hr>
-                  <h5>Tópicos</h5>
+                  <h6>Tópicos</h6>
                   <hr>
                   <p><a href="ajuda.html">Ajuda</a></p>
                   <p><a href="quem-somos.html">Quem Somos</a></p>
