--- a/quem-somos.html
+++ b/quem-somos.html
@@ -49,7 +49,7 @@
     </div>
   </nav>
   <div class="container">
-    <h6 class="blog">Quem Somos</h6>
+    <h6 class="blog">Resumo do Estatuto e Objetivos</h6>
     <p class="blocktext">O <i>Instituto Ser Integral</i> é uma associação civil sem fins lucrativos, com sede em Campo Grande.</p>
     <p class="blocktext">Temos como objetivo a promoção social e educacional da população de baixa renda, mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais de melhor qualidade</p>
     <p class="blocktext">O Instituto Ser Integral tem como objetivos maiores e finais:</p>
@@ -66,6 +66,29 @@
     <p class="blocktext">No desenvolvimento de suas atividades, a Associação observará os princípios da legalidade, impessoalidade, moralidade, publicidade, economicidade e da eficiência e não fará qualquer discriminação de raça, gênero, cor, opção sexual ou religião.</p>
     <h6 class="signature">Instituto Ser Integral</h6>
     <h6 class="signature">Conselho Diretor</h6>
+    <div class="col-12">
+      <h6>Quem somos</h6>
+  </div>
+    <div class="col-md-6">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
+        <div class="card text-white bg-info">
+            <img src="img/Ana_Coelho.jpg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Ana Cláudia Coelho</h6>
+                <p class="card-text"> Representante Comercial <br><br> Professora de Interpretação de Texto</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
+        <div class="card text-white bg-info">
+            <img src="img/Bruno_Ferreira.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Bruno Ferreira</h6>
+                <p class="card-text"> Estudante <br><br> Coordenação</p>
+            </div>
+        </div>
+      </div>
+    </div>
   </div>
   <footer>
     <div class="container-fluid padding">
@@ -73,7 +96,7 @@
         <div class="col-md-4">
           <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
           <hr>
-          <h5>Fale Conosco</h5>
+          <h6>Fale Conosco</h6>
           <hr>
           <p>projetoavante00@gmail.com</p>
           <p>Avenida Gualter Barbosa, 1.206</p>
@@ -81,14 +104,14 @@
         </div>
         <div class="col-md-4">
           <hr>
-          <h5>Horários (BSB)</h5>
+          <h6>Horários (BSB)</h6>
           <hr>
           <p>Segunda, Quarta e Sexta</p>
           <p>8h - 11h40min | 14h - 17h40min</p>
         </div>
         <div class="col-md-4">
           <hr>
-          <h5>Tópicos</h5>
+          <h6>Tópicos</h6>
           <hr>
           <p><a href="ajuda.html">Ajuda</a></p>
           <p><a href="quem-somos.html">Quem Somos</a></p>
