Criada a página 'Missão'. Incluídos a primeira parte dos colaboradores na página 'Quem Somos'.

--- a/missao.html
+++ b/missao.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+              <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="espiritismo.html">Espiritismo</a>
@@ -48,9 +48,24 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
-  </div>
+  <div class="container">
+    <h6 class="blog">Resumo do Estatuto e Missão</h6>
+    <p class="blocktext">O <i>Instituto Ser Integral</i> é uma associação civil sem fins lucrativos, com sede em Campo Grande.</p>
+    <p class="blocktext">Temos como objetivo a promoção social e educacional da população de baixa renda, mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais de melhor qualidade</p>
+    <p class="blocktext">Nossa Missão:</p>
+      <ol class="blocktext">
+        <li class="blocktext">Promover programas e ações de promoção social;</li>
+        <li class="blocktext">Promover programas sociais;</li>
+        <li class="blocktext">Promover o voluntariado;</li>
+        <li class="blocktext">A participação na elaboração de políticas públicas e na legislação sobre educação pública;</li>
+        <li class="blocktext">Celebrar convênios, contratos, acordos e ajustes com instituições públicas ou privadas, nacionais ou internacionais visando a promoção de ações de promoção social e acesso à educação de qualidade;</li>
+        <li class="blocktext">Promover ações, programas e atividades direcionadas a consecução dos objetivos constantes deste Estatuto;</li>
+        <li class="blocktext">Divulgação da Doutrina Espírita por meio de todos os veículos de comunicação social compatíveis com os princípios ético-morais espíritas.</li>
+      </ol>
+    <p class="blocktext">A Associação não distribui, entre seus associados, conselheiros, diretores, empregados ou doadores eventuais excedentes operacionais, brutos ou líquidos, dividendos, bonificações, participações ou parcelas do seu patrimônio, auferidos mediante o exercício de suas atividades, e os aplica integralmente na consecução do seu objetivo social.</p>
+    <p class="blocktext">No desenvolvimento de suas atividades, a Associação observará os princípios da legalidade, impessoalidade, moralidade, publicidade, economicidade e da eficiência e não fará qualquer discriminação de raça, gênero, cor, opção sexual ou religião.</p>
+    <h6 class="signature">Instituto Ser Integral</h6>
+    <h6 class="signature">Conselho Diretor</h6>
   <footer>
     <div class="container-fluid padding">
       <div class="row text-center">
@@ -75,8 +90,8 @@
           <h6>Tópicos</h6>
           <hr>
           <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="missao.html">Missão</a></p>
           <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="inscricao.html">Inscreva-se</a></p> -->
           <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
