--- a/quem-somos.html
+++ b/quem-somos.html
@@ -49,42 +49,160 @@
     </div>
   </nav>
   <div class="container">
-    <h6 class="blog">Resumo do Estatuto e Objetivos</h6>
-    <p class="blocktext">O <i>Instituto Ser Integral</i> é uma associação civil sem fins lucrativos, com sede em Campo Grande.</p>
-    <p class="blocktext">Temos como objetivo a promoção social e educacional da população de baixa renda, mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais de melhor qualidade</p>
-    <p class="blocktext">O Instituto Ser Integral tem como objetivos maiores e finais:</p>
-      <ol class="blocktext">
-        <li class="blocktext">Promover programas e ações de promoção social;</li>
-        <li class="blocktext">Promover programas sociais;</li>
-        <li class="blocktext">Promover o voluntariado;</li>
-        <li class="blocktext">A participação na elaboração de políticas públicas e na legislação sobre educação pública;</li>
-        <li class="blocktext">Celebrar convênios, contratos, acordos e ajustes com instituições públicas ou privadas, nacionais ou internacionais visando a promoção de ações de promoção social e acesso à educação de qualidade;</li>
-        <li class="blocktext">Promover ações, programas e atividades direcionadas a consecução dos objetivos constantes deste Estatuto;</li>
-        <li class="blocktext">Divulgação da Doutrina Espírita por meio de todos os veículos de comunicação social compatíveis com os princípios ético-morais espíritas.</li>
-      </ol>
-    <p class="blocktext">A Associação não distribui, entre seus associados, conselheiros, diretores, empregados ou doadores eventuais excedentes operacionais, brutos ou líquidos, dividendos, bonificações, participações ou parcelas do seu patrimônio, auferidos mediante o exercício de suas atividades, e os aplica integralmente na consecução do seu objetivo social.</p>
-    <p class="blocktext">No desenvolvimento de suas atividades, a Associação observará os princípios da legalidade, impessoalidade, moralidade, publicidade, economicidade e da eficiência e não fará qualquer discriminação de raça, gênero, cor, opção sexual ou religião.</p>
-    <h6 class="signature">Instituto Ser Integral</h6>
-    <h6 class="signature">Conselho Diretor</h6>
     <div class="col-12">
       <h6>Quem somos</h6>
   </div>
     <div class="col-md-6">
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
-            <img src="img/Ana_Coelho.jpg" class="colab" alt="">
+            <img src="img/Alexandra.jpeg" class="colab" alt="">
             <div class="card-body">
-                <h6 class="card-title">Ana Cláudia Coelho</h6>
-                <p class="card-text"> Representante Comercial <br><br> Professora de Interpretação de Texto</p>
+                <h6 class="card-title">Alexandra Galvão Ferreira Oliveira</h6>
+                <p class="card-text"> Médica Pediatra <br><br> Professora de Redação / Diretora</p>
             </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
         <div class="card text-white bg-info">
+            <img src="img/Ana_Coelho.jpg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Ana Cláudia Coelho</h6>
+                <p class="card-text"> Representante Comercial <br><br> Professora de Interpretação de Texto / Diretora Financeira</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"> -->
+        <div class="card text-white bg-info">
+            <img src="img/Ayla-Vasconcellos.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Ayla Lizandra Campos de Vasconcellos</h6>
+                <p class="card-text"> Professora de Português, Libras e TILS<br><br> Professora de Língua Portuguesa</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
             <img src="img/Bruno_Ferreira.jpeg" class="colab" alt="">
             <div class="card-body">
                 <h6 class="card-title">Bruno Ferreira</h6>
-                <p class="card-text"> Estudante <br><br> Coordenação</p>
+                <p class="card-text"> Estudante <br><br> Professor / Coordenador</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Darcy-Martins-Lemos.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Darcy Martins Lemos</h6>
+                <p class="card-text"> Dona de Casa <br><br> Professora</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Emily-Lima-de-Souza.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Emily Lima de Souza</h6>
+                <p class="card-text"> Estudante <br><br> Professora de Gramática e Redação</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Estifania.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Estifânia Santos</h6>
+                <p class="card-text"> Técnica de Enfermagem / Instrumentadora Cirúrgica <br><br> Coordenadora</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Alberton.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Fabiano Alberton de Alencar Nogueira</h6>
+                <p class="card-text"> Servidor Público / Professor / Empresário <br><br> Professor de Matemática</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Gabriel.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Gabriel Martins Estábile</h6>
+                <p class="card-text"> Estudante <br><br> Professor</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Giovana-Lopes.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Giovana dos Santos Lopes</h6>
+                <p class="card-text"> Professora Universitária <br><br> Professora</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Jaqueline-Alonso.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Jaqueline Alonso Braga de Oliveira</h6>
+                <p class="card-text"> Professora do IFMS <br><br> Professora</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Joana-Darc.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Joana Darc Barbosa da Costa</h6>
+                <p class="card-text"> Professora<br> Docente de Gramática, Interpretação de Texto e Redação</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Maria-de-Fatima.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Maria de Fátima Dórea dos Santos</h6>
+                <p class="card-text"> Psicóloga<br> Orientação e Apoio Psicológico</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Licio-Ferraz.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Lício Sérgio Ferraz de Brito</h6>
+                <p class="card-text"> Analista de Sistemas</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Paulo-Cesar.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Paulo César Oliveira</h6>
+                <p class="card-text"> Engenheiro / Professor do IFMS <br><br> Professor / Coordenador de Matemática IFMS / Diretor</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Joao.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">João Carlos Nascimento Ferreira Júnior</h6>
+                <p class="card-text"> Engenheiro / Servidor Público<br><br> Professor / Coordenador de Matemática CM / Diretor Geral</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Alan.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Alanderson Américo de Moraes Benites</h6>
+                <p class="card-text"> Analista de Sistemas / Funcionário Público<br><br> Responsável pelo Site</p>
             </div>
         </div>
       </div>
@@ -114,8 +232,8 @@
           <h6>Tópicos</h6>
           <hr>
           <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="missao.html">Missão</a></p>
           <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="inscricao.html">Inscreva-se</a></p> -->
           <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
