--- a/ajuda.html
+++ b/ajuda.html
@@ -131,8 +131,8 @@
           <h6>Tópicos</h6>
           <hr>
           <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="missao.html">Missão</a></p>
           <p><a href="quem-somos.html">Quem Somos</a></p>
-          <!-- <p><a href="inscricao.html">Inscreva-se</a></p> -->
           <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
           <p><a href="colaboradores.html">Colaboradores</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
